# ZH2

./: .clang-format  .clang-tidy  .cursorignore  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  GAMEPLAY.md  LICENSE  README.md  TODO.md  agents.toml  justfile  project-words.txt  vcpkg.json
apps/animation_tests/: CMakeLists.txt
apps/animation_tests/src/: AnimationBlendTests.cpp  AnimationClipTests.cpp  AnimationComponentSerializerTests.cpp  AnimationGraphTests.cpp  AnimationLibraryContractTests.cpp  AnimationSamplerTests.cpp  AnimationSettingsTests.cpp  AnimationTestsMain.cpp  HockeyAnimationControllerTests.cpp  SkeletonTests.cpp  Test.hpp
apps/asset_tests/: CMakeLists.txt
apps/asset_tests/src/: AnimationAssetTests.cpp  AssetDatabaseTests.cpp  AssetIDTests.cpp  AssetMetadataTests.cpp  AssetPathTests.cpp  AssetTestsMain.cpp  AudioAssetTests.cpp  BasicShapeAssetTests.cpp  DependencyTests.cpp  GltfImportTests.cpp  HotReloadTests.cpp  MaterialTests.cpp  Phase5GapTests.cpp  RuntimePackageTests.cpp  ShaderCookTests.cpp  SvgTextureImportTests.cpp  Test.hpp  TextureImportTests.cpp
apps/audio_tests/: CMakeLists.txt
apps/audio_tests/src/: AudioClipTests.cpp  AudioComponentTests.cpp  AudioMixerTests.cpp  AudioSettingsTests.cpp  AudioSystemTests.cpp  AudioTestsMain.cpp  HockeyAudioControllerTests.cpp  HockeyAudioCueSettingsTests.cpp  Test.hpp
apps/core_tests/: CMakeLists.txt
apps/core_tests/src/: CommandLineTests.cpp  ConfigTests.cpp  CoreTestsMain.cpp  EventQueueTests.cpp  FileSystemTests.cpp  FixedTickTests.cpp  JobSystemTests.cpp  PathTests.cpp  PlatformTests.cpp  ResourceProviderTests.cpp  Test.hpp  ThreadPoolTests.cpp  TimeTests.cpp  UUIDTests.cpp
apps/dedicated_server/: CMakeLists.txt
apps/dedicated_server/src/: DedicatedServerApp.cpp  DedicatedServerApp.hpp  DedicatedServerMain.cpp  EmbeddedServerDefaults.hpp
apps/ecs_tests/: CMakeLists.txt
apps/ecs_tests/src/: ComponentMetadataTests.cpp  ComponentTests.cpp  ECSTestsMain.cpp  EntityTests.cpp  HierarchyTests.cpp  Phase2AuditTests.cpp  Phase2GapTests.cpp  PrefabTests.cpp  RenderComponentTests.cpp  SceneEventTests.cpp  SceneLifecycleTests.cpp  SceneSerializationTests.cpp  SceneValidationTests.cpp  TransformTests.cpp
apps/editor_tests/: CMakeLists.txt
apps/editor_tests/src/: CameraLightGizmoTests.cpp  ClientFlowPanelContractTests.cpp  EditorAudioCueContractTests.cpp  EditorClientPreviewTests.cpp  EditorContextAssetSelectionTests.cpp  EditorGameplayPreviewTests.cpp  EditorIconContractTests.cpp  EditorLayoutPersistenceTests.cpp  EditorSettingsTests.cpp  EditorTestsMain.cpp  EditorTooltipContractTests.cpp  EditorVersionTests.cpp  GameplayTuningPanelContractTests.cpp  HierarchyPanelContractTests.cpp  HockeyPhysicsSetupTests.cpp  InspectorAssetContractTests.cpp  InspectorFieldTests.cpp  PackagePanelContractTests.cpp  PackageProfileTests.cpp  ProjectBrowserTests.cpp  ProjectPanelContractTests.cpp  ProjectSettingsPanelContractTests.cpp  SceneViewOverlayTests.cpp  SceneWorkflowTests.cpp  SelectionTests.cpp  ToolTests.cpp  UndoRedoTests.cpp
apps/game_client/: CMakeLists.txt
apps/game_client/src/: EmbeddedClientDefaults.hpp  GameClientApp.cpp  GameClientApp.hpp  GameClientMain.cpp  GameplayCamera.cpp  GameplayCamera.hpp  GameplayPresentation.cpp  GameplayPresentation.hpp
apps/game_client_tests/: CMakeLists.txt
apps/game_client_tests/src/: ConfigPathTests.cpp  GameClientAnimationContractTests.cpp  GameClientAudioContractTests.cpp  GameClientTestsMain.cpp  GameplayCameraTests.cpp  GameplayPresentationTests.cpp  Test.hpp
apps/gameplay_tests/: CMakeLists.txt
apps/gameplay_tests/src/: CheckingTests.cpp  EventTests.cpp  GameplayComponentTests.cpp  GameplaySnapshotTests.cpp  GameplayTestsMain.cpp  GameplayWorldTests.cpp  GoalDetectionTests.cpp  HeadlessServerGameplayTests.cpp  InputModelTests.cpp  MainRinkGameplayTests.cpp  MatchSetupTests.cpp  OutOfPlayTests.cpp  PassingTests.cpp  PlayerMovementTests.cpp  PuckControllerTests.cpp  PuckInteractionTests.cpp  ResetSystemTests.cpp  SettingsTuningTests.cpp  ShootingTests.cpp  StealTests.cpp  TeamTypesTests.cpp  WaypointMarkerTests.cpp
apps/map_editor/: CMakeLists.txt
apps/map_editor/src/: MapEditorApp.cpp  MapEditorApp.hpp  MapEditorMain.cpp
apps/physics_tests/: CMakeLists.txt
apps/physics_tests/src/: ColliderTests.cpp  CollisionLayerTests.cpp  ContactEventTests.cpp  DebugDrawTests.cpp  HeadlessServerPhysicsTests.cpp  Phase6GapTests.cpp  PhysicsComponentTests.cpp  PhysicsInitTests.cpp  PhysicsMaterialTests.cpp  PhysicsTestsMain.cpp  PhysicsWorldTests.cpp  QueryTests.cpp  RigidBodyTests.cpp  SceneSyncTests.cpp  Test.hpp  TriggerTests.cpp
apps/renderer_tests/: CMakeLists.txt
apps/renderer_tests/src/: HeadlessServerLinkTests.cpp  MaterialAssetContractTests.cpp  RenderGraphTests.cpp  RendererDecalContractTests.cpp  RendererSettingsTests.cpp  RendererShadowContractTests.cpp  RendererSmokeTests.cpp  RendererTestsMain.cpp  ResourceHandleTests.cpp  ShaderCompileTests.cpp  Test.hpp  UIOverlayContractTests.cpp
apps/ui_tests/: CMakeLists.txt
apps/ui_tests/src/: ClientFlowTests.cpp  GameClientUiContractTests.cpp  HudViewModelTests.cpp  RmlUiContextTests.cpp  RmlUiInterfaceTests.cpp  Test.hpp  UIArchitectureContractTests.cpp  UIAssetContractTests.cpp  UIInputMapperTests.cpp  UISettingsTests.cpp  UITestsMain.cpp
libs/animation/: CMakeLists.txt
libs/animation/src/: Animation.cpp  AnimationBlend.cpp  AnimationClip.cpp  AnimationComponents.cpp  AnimationEvents.cpp  AnimationGraph.cpp  AnimationPose.cpp  AnimationSampler.cpp  AnimationSerializer.cpp  AnimationSettings.cpp  AnimationStateMachine.cpp  AnimationSystem.cpp  HockeyAnimationController.cpp  Skeleton.cpp
libs/assets/: CMakeLists.txt
libs/assets/src/: AssetDatabase.cpp  AssetEvent.cpp  AssetHash.cpp  AssetID.cpp  AssetManager.cpp  AssetPath.cpp  (+5 more)
libs/audio/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/ecs/: CMakeLists.txt
libs/editor/: CMakeLists.txt
libs/gameplay/: CMakeLists.txt
libs/physics/: CMakeLists.txt
libs/renderer/: CMakeLists.txt
libs/ui/: CMakeLists.txt
(+1164 files in other folders)
